# asset-discovery

./: .gitignore  CMakeLists.txt  README.md
include/: asset-discovery.h
src/: asset-discovery.c  main.c
